# EasyQ2

./: CMakeLists.txt  main.c  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
MAX86178/: CMakeLists.txt  max86178.c  max86178.h  max86178_ss_instance.c
drivers/: CMakeLists.txt
drivers/EASYQ/: CMakeLists.txt  cmd_manager.c  cmd_manager.h  easyq.c  easyq.h  easyq_helper.c  easyq_helper.h  easyq_timers.h
drivers/SPI/: CMakeLists.txt  spi_api.c  spi_api.h
utilities/: CMakeLists.txt  Peripherals.h  crc8.c  crc8.h  device.h  gpio.h  mxm_assert.c  mxm_assert.h  queue.c  queue.h  queueZ.c  queueZ.h  sensorhub.c  sensorhub.h  sh_comm_defs.h  sh_defs.h  sh_utils.c  sh_utils.h  tmr.h  tmr_utils.h  utils.c  utils.h
